[tool.poetry]
name = "forecaster-api"
version = "0.1.0"
description = "A simple forecasting API using FastAPI"
authors = ["Anjishnu Saw <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.35.0"
yfinance = "^0.2.64"
numpy = "^1.26.4"
pandas = "^2.3.0"
scikit-learn = "^1.7.0"
tensorflow = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
